[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/background.png" type="Texture" id=1]
[ext_resource path="res://Assets/MovingClouds/MovingClouds.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Ladder.png" type="Texture" id=3]
[ext_resource path="res://Assets/glowing circle.png" type="Texture" id=4]
[ext_resource path="res://Fonts/FFFFORWA.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/gear.png" type="Texture" id=6]
[ext_resource path="res://UI/Main.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 5 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="glowing-circle" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -889.0
margin_top = -870.5
margin_right = 889.0
margin_bottom = 870.5
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovingClouds" parent="." instance=ExtResource( 2 )]

[node name="Taskabun" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -367.5
margin_top = -129.5
margin_right = 367.5
margin_bottom = 35.5
custom_colors/font_color = Color( 0.858824, 0.54902, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Taskabun"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YSort" type="YSort" parent="."]

[node name="ladder" type="TextureRect" parent="YSort"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 788.0
margin_top = 672.0
margin_right = 1180.0
margin_bottom = 1250.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create-Game" type="Button" parent="YSort"]
margin_left = 864.0
margin_top = 775.0
margin_right = 1084.0
margin_bottom = 817.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0.215686, 0.0901961, 0.384314, 1 )
custom_colors/font_color_hover = Color( 0.156863, 0.576471, 0.705882, 1 )
custom_colors/font_color_pressed = Color( 0.541176, 0.0784314, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Create Game"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join-Game" type="Button" parent="YSort"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 862.0
margin_top = 935.0
margin_right = 1082.0
margin_bottom = 977.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0.215686, 0.0901961, 0.384314, 1 )
custom_colors/font_color_hover = Color( 0.729412, 0.227451, 0.380392, 1 )
custom_colors/font_color_pressed = Color( 0.541176, 0.0784314, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Join Game"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 1646, -48 )
scale = Vector2( 1.47768, 1.49554 )
normal = ExtResource( 6 )

[connection signal="pressed" from="YSort/Create-Game" to="." method="_on_CreateGame_pressed"]
[connection signal="pressed" from="YSort/Join-Game" to="." method="_on_JoinGame_pressed"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
